--- a/index.html
+++ b/index.html
@@ -4,32 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shakib Al Hasan</title>
-         <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
-         <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section class="top-banar">
+    <section class="top-banner">
         <div class="half-width">
-          <h1>Hello It's</h1>
-        <h1> <samp class="orange-highlight">Shakib Al Hasan</samp> </h1>
-        <h3>World No.1 All-Rounder</h3>
-        <p>In 2015, Shakib became the first and only cricketer in history to be ranked the 'No.1 all-rounder' by ICC in its Player Rankings in all three formats of the game (Test, One Day and Tewety20 Internationals.</p>
-        <a class="link-button" target="_blank" href="https://www.facebook.com/Shakib.Al.Hasan/">FACEBOOK PAGE</a>
+         <h1>Hello,It's</h1>
+         <h1> <samp class="orange-highlight">Shakib Al Hasan</samp></h1>
+         <h3>World No.1 All-Rounder</h3>
+         <p>In 2015, Shakib became the first and only cricketer in history to be ranked the 'No.1 all-rounder' by ICC in its Player Rankings in all three formats of the game (Test, One Day and Tewety20 Internationals).</p>
+         <a class="link-button" target="_blank" href="https://www.facebook.com/Shakib.Al.Hasan/">FACEBOOK PAGE</a>
         </div>
         <div class="half-width">
             <img src="images/profile 1.png" alt="">
         </div>
     </section>
     <section class="about-area">
-        <div class="half-width"><img src="images/profile.2.png" alt="">
-        </div>
         <div class="half-width">
-         <h2>About</h2>
-         <p> Shakib Al Hasan is a Bangladeshi international cricketer .Who was ICC's no.1 all rounder in all three formats of the game in 2015.He is the only captain to take a five-for in T20Is. ... He is currently ranked no.1 in ODIs, no.4 in tests and no.2 in T20Is.
-            Team: Bangladesh national cricket team;
-            Sport: Cricket, Test cricket, One Day International, T20 cricket; 
-            Born: 24 March 1987, Magura;
-            Position: All-rounder.</p>
+            <img src="images/profile.2.png" alt="">
+        </div>
+        <div>
+            <h2>About</h2> 
+            <p>Shakib Al Hasan is a Bangladeshi international cricketer who was ICC's no.1 all rounder in all three formats of the game in 2015.He is the only captain to take a five-for in T20Is. ... He is currently ranked no.1 in ODIs, no.4 in tests and no.2 in T20Is.  
+                  <li> Team: Bangladesh national cricket team;</li>
+                  <li> Sport: Cricket, Test cricket, One Day International,T20 cricket;</li>
+                  <li> Born: 24 March 1987, Magura</li> 
+                  <li> Position: All-rounder.</li>
+            </p>
+            <a class="link-button" target="_blank" href="https://en.wikipedia.org/wiki/Shakib_Al_Hasan">MORE DETAILS</a>
+        </div>
+    </section>
+    <section class="achievement-area">
+        <div>
+            <h2>His Latest</h2><h2 class="orange-highlight">Achievement</h2>
+            <img class="odi" src="images/shakib Odi.jpg" alt="">
+            <img class="t20" src="images/shakib t20.JPG" alt="">
+            <img class="test" src="images/shakib test.jpg" alt="">
         </div>
     </section>
     
