--- a/index.html
+++ b/index.html
@@ -34,13 +34,51 @@
             <a class="link-button" target="_blank" href="https://en.wikipedia.org/wiki/Shakib_Al_Hasan">MORE DETAILS</a>
         </div>
     </section>
-    <section class="achievement-area">
-        <div>
-            <h2>His Latest</h2><h2 class="orange-highlight">Achievement</h2>
-            <img class="odi" src="images/shakib Odi.jpg" alt="">
-            <img class="t20" src="images/shakib t20.JPG" alt="">
-            <img class="test" src="images/shakib test.jpg" alt="">
+    <section class="achievement-tittle">
+         <div class="achievement-area">
+             <h2>His Latest<samp class="orange-highlight"> Achievement</samp> </h2> 
+         </div>
+         <div id="odi">
+             <div class="achievement-col">
+              <img src="images/shakib Odi.jpg" alt="">
+              <div class="tag"><strong>Odi Cricket</strong></div>
+              <div class="tag-dt"><p><li>Bat :64(77) </li>   
+                <li> Bowl :0-57</p></li>
+             </div>
+            </div>
+       </div>
+        <div id="t20"><div class="achievement-col">
+            <img class="t20" src="images/shakib t20.png" alt="">
+            <div class="tag">
+                <strong>T20 Cricket</strong>
+            </div>
+            <div class="tag-dt"><p> <li>Bat:26(28)</li>          
+                <li> Bowl:1-31</li></p>
+               </div>
+       </div></div>
+       <div id="test"><div class="achievement-col">
+        <img src="images/shakib test.jpg" alt="">
+        <div class="tag"><strong>Test Cricket</strong>
         </div>
+        <div class="tag-dt"><p><li> Bat:55(74)</li>
+            <li>Bowl:5-122</li></p> </div>
+     </div>
+    </div>
+    </section>
+    <section class="work-area">
+        <div>
+            <h1 class="work">Visit His Instagram</h1> 
+            <a class="button" target="_blank" href="https://www.instagram.com/sah75fc/?hl=en">Instagram</a>
+    </section>
+    <section class="design">
+       <div><footer><h3 class="stay">Stay connect</h3></footer>
+        <h2 class="gmail">alarman37@gmail.com</h2></div> 
+        <div class="icon">
+            <img src="images/icon 1.png" alt="">
+            <img src="images/icon 2.png" alt="">
+            <img src="images/icon 3.png" alt="">
+        </div>
+
     </section>
     
 </body>
