--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </section>
     <section class="work-area">
         <div>
-            <h1 class="work">Visit His Instagram</h1> 
+            <h1 class="work">Visit His</h1> 
             <a class="button" target="_blank" href="https://www.instagram.com/sah75fc/?hl=en">Instagram</a>
     </section>
     <section class="design">
