--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
     </section>
     <section class="design">
        <div><footer><h3 class="stay">Stay connect</h3></footer>
-        <h2 class="gmail">alarman37@gmail.com</h2></div> 
+        <p class="gmail">alarman37@gmail.com</p></div> 
         <div class="icon">
-            <img src="images/icon 1.png" alt="">
-            <img src="images/icon 2.png" alt="">
-            <img src="images/icon 3.png" alt="">
+            <img class="img1" src="images/icon 1.png" alt="">
+            <img class="img2" src="images/icon 2.png" alt="">
+            <img class="img3" src="images/icon 3.png" alt="">
         </div>
 
     </section>
